fixed mobile keyboard overflowing issue

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 html,
 body {
+    width: 100vw;
+    height: 100vh;
     font-size: 18px;
     font-family: var(--font-family);
     margin: 0;
@@ -235,16 +237,17 @@ footer{
     .container {
         width: 100vw;
         height: 100vh;
-        display: grid;
-        grid-template: 1fr 2fr / 1fr;
+        display: block;
         margin: 0;
     }
 
     .colored {
+        height: 240px;
         background-image: url('./images/bg-main-mobile.png');
     }
 
     .white {
+        height: 400px;
         display: grid;
         text-transform: uppercase;
         font-size: 1rem;
@@ -266,10 +269,10 @@ footer{
     /* cards positioning and styling */
 
     .cards{
-        position: fixed;
+        position: absolute;
         width: 380px;
         height: 262px;
-        top: max(10px,calc(100vh / 3 - 190px));
+        top: 15px;
         left: calc(50vw - 190px);
     }
 
@@ -324,7 +327,7 @@ footer{
         position: absolute;
         width: 300px;
         height: 222px;
-        top: calc(100vh / 3 - 150px);
+        top: 60px;
         left: calc(50vw - 150px);
     }
     /* card front */
@@ -350,20 +353,3 @@ footer{
     }
 
 }
-
-@media screen and (min-width:420px) and (max-width: 790px) and (max-height: 750px){
-
-    .white{
-        align-items: center;
-        margin-bottom: 20px;
-    }
-
-    .cards{
-        position: absolute;
-        width: 300px;
-        height: 222px;
-        top: calc(100vh / 3 - 220px);
-        left: calc(50vw - 180px);
-    }
-}
-
